UtahLiveDataTest/src/objects/MatchTracker__c.object
<CustomObject>
    <description>[Business] Ask Shiva about the description.</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BudgetCategory__c</fullName>
        <label>Budget Category</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HidePaymentHideDelete__c</fullName>
        <formula>PaymentRequest__r.HideEdit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HidePaymentHideDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MatchDate__c</fullName>
        <label>Match Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MatchName__c</fullName>
        <label>Match Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MatchType__c</fullName>
        <label>Match Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MatchType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PaymentRequest__c</fullName>
        <label>Payment Request</label>
        <referenceTo>PaymentRequest__c</referenceTo>
        <relationshipLabel>Match Tracker</relationshipLabel>
        <relationshipName>MatchTracker</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Match Tracker</label>
    <nameField>
        <displayFormat>MT-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Match Tracker</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>